need changes to style

--- a/index.html
+++ b/index.html
@@ -11,19 +11,26 @@
         <div class="backimage">
           <div class ="container">
             <div class= "keys">
-                <p id ="key1"> A <p id="key11">Clap</p></p> 
-                <p id ="key2"> A <p id="key21">Clap</p></p> 
-                <p id ="key3"> A <p id="key31">Clap</p></p> 
-                <p id ="key4"> A <p id="key41">Clap</p></p> 
-                <p id ="key5"> A <p id="key51">Clap</p></p> 
-                <p id ="key6"> A <p id="key61">Clap</p></p> 
-                <p id ="key7"> A <p id="key71">Clap</p></p> 
-                <p id ="key8"> A <p id="key81">Clap</p></p> 
-                <p id ="key9"> A <p id="key91">Clap</p></p> 
+                <div class="keys1"> <p id="keyA"> A </p> <p id ="keys111">CLAP</p></div>
+                <div class="keys1"> <p id="keyS"> S </p> <p id ="keys111">HIHAT</p></div>
+                <div class="keys1"> <p id="keyD"> D </p> <p id ="keys111">KICK</p></div>
+                <div class="keys1"> <p id="keyF"> F </p> <p id ="keys111">OPENHAT</p></div>
+                <div class="keys1"> <p id="keyG"> G </p> <p id ="keys111">BOOM</p></div>
+                <div class="keys1"> <p id="keysH"> H </p> <p id ="keys111">RIDE</p></div>
+                <div class="keys1"> <p id="keysJ"> J </p> <p id ="keys111">SNARE</p></div>
+                <div class="keys1"> <p id="keysK"> K </p> <p id ="keys111">TOM</p></div>
+                <div class="keys1"> <p id="keysL"> L </p> <p id ="keys111">TINK</p></div>
             </div>
           </div>    
-        </div>
-        
-        <script src="app.js" ></script>
+          <audio id="clap" src="assets/clap.wav"></audio>
+          <audio id="boom" src="assets/boom.wav"></audio>
+          <audio id="hihat" src="assets/hihat.wav"></audio>
+          <audio id="kick" src="assets/kick.wav"></audio>
+          <audio id="openhat" src="assets/openhat.wav"></audio>
+          <audio id="ride" src="assets/ride.wav"></audio>
+          <audio id="snare" src="assets/snare.wav"></audio>
+          <audio id="tink" src="assets/tink.wav"></audio>
+          <audio id="tom" src="assets/tom.wav"></audio>
+        <script src="/app.js" ></script>
     </body>
     </html>
